# sample-native-lib

./: .gitignore  .packages  README.md  check.dart  consume_header.dart  header.h  pubspec.yaml
.dart_tool/: package_config.json
lib_parse/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  parser.cpp  parser.h
parse_lib/: CMakeLists.txt  cmake_install.cmake  parser.def
spell_lib/: CMakeCache.txt  CMakeLists.txt  Makefile  check_lib.cbp  checker.cpp  checker.def  checker.h  cmake_install.cmake
